# HITSIC_MK66F18

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
HITSIC_MK66F16_IAR/: 包含目录.txt
HITSIC_MK66F16_IAR/CMSIS_5.4.0/: 一键清理无用文件.bat
HITSIC_MK66F16_IAR/CMSIS_5.6.0/: 一键清理无用文件.bat
HITSIC_MK66F16_IAR/boards/HITSIC_MK66F18/IAR/: HITSIC_MK66F18.dep  HITSIC_MK66F18.ewp  HITSIC_MK66F18.ewt  MK66FX1M0xxx18_flash.icf
HITSIC_MK66F16_IAR/boards/HITSIC_MK66F18/IAR/Debug/List/: HITSIC_MK66F18.map
HITSIC_MK66F16_IAR/boards/HITSIC_MK66F18/IAR/settings/: HITSIC_MK66F18.Debug.cspy.bat  HITSIC_MK66F18.Debug.cspy.ps1  HITSIC_MK66F18.Debug.driver.xcl  HITSIC_MK66F18.Debug.general.xcl  HITSIC_MK66F18.dnx  HITSIC_MK66F18.wsdt
HITSIC_MK66F16_IAR/boards/HITSIC_MK66F18/__iar/: HITSIC_MK66F18.dep  HITSIC_MK66F18.eww
HITSIC_MK66F16_IAR/boards/HITSIC_MK66F18/__iar/.metadata/: version.ini
HITSIC_MK66F16_IAR/boards/HITSIC_MK66F18/__iar/settings/: HITSIC_MK66F18.Debug.cspy.bat  HITSIC_MK66F18.wsdt
HITSIC_MK66F16_IAR/boards/HITSIC_MK66F18/main/: main.c
HITSIC_MK66F16_IAR/components/codec/sgtl5000/: fsl_sgtl5000.c  fsl_sgtl5000.h
HITSIC_MK66F16_IAR/devices/MK66F18/arm/: MK66FX1M0xxx18_flash.scf
HITSIC_MK66F16_IAR/devices/MK66F18/gcc/: MK66FX1M0xxx18_flash.ld  MK66FX1M0xxx18_ram.ld
HITSIC_MK66F16_IAR/middleware/mcu-boot/targets/MK65F18/src/: hardware_init_MK65F18.c
HITSIC_MK66F16_IAR/middleware/mcu-boot/targets/MK65F18/src/startup/iar/: startup_MK65F18.s
HITSIC_MK66F18_IAR/: README.md  工程配置.txt
HITSIC_MK66F18_IAR/boards/HITSIC_MK66F18/__iar/: HITSIC_MK66F18.dep  HITSIC_MK66F18.ewd  HITSIC_MK66F18.ewp  HITSIC_MK66F18.ewt  HITSIC_MK66F18.mex  HITSIC_MK66F18.sln  HITSIC_MK66F18.vcxproj  HITSIC_MK66F18.vcxproj.filters  MK66FX1M0xxx18_flash.icf  MK66FX1M0xxx18_ram.icf  工程配置备忘.txt
HITSIC_MK66F18_IAR/boards/HITSIC_MK66F18/__iar/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
HITSIC_MK66F18_IAR/boards/HITSIC_MK66F18/__iar/Debug/List/: HITSIC_MK66F18.map
HITSIC_MK66F18_IAR/boards/HITSIC_MK66F18/__iar/Release/Exe/: HITSIC_MK66F18.hex  HITSIC_MK66F18.sim
HITSIC_MK66F18_IAR/boards/HITSIC_MK66F18/__iar/Release/List/: HITSIC_MK66F18.map
HITSIC_MK66F18_IAR/boards/HITSIC_MK66F18/__iar/settings/: HITSIC_MK66F18.Debug.cspy.bat  HITSIC_MK66F18.Debug.cspy.ps1  HITSIC_MK66F18.Release.cspy.bat  HITSIC_MK66F18.Release.cspy.ps1  HITSIC_MK66F18.dbgdt  HITSIC_MK66F18.dnx  HITSIC_MK66F18.wsdt
HITSIC_MK66F18_IAR/boards/HITSIC_MK66F18/board/: board.h  clock_config.c  clock_config.h  peripherals.c  peripherals.c.bak  peripherals.h  peripherals.h.bak  pin_mux.c  pin_mux.c.bak  pin_mux.h  pin_mux.h.bak
HITSIC_MK66F18_IAR/boards/HITSIC_MK66F18/main/: inc_generic.h  inc_stdlib.h  main.c
HITSIC_MK66F18_IAR/components/codec/port/sgtl5000/: fsl_codec_adapter.c
HITSIC_MK66F18_IAR/components/serial_manager/: serial_manager.h
HITSIC_MK66F18_IAR/devices/MK66F18/arm/: MK66FX1M0xxx18_ram.scf
HITSIC_MK66F18_IAR/devices/MK66F18/utilities/debug_console/: fsl_debug_console.h  fsl_debug_console_conf.h
HITSIC_MK66F18_IAR/middleware/mcu-boot/targets/MK65F18/src/: bootloader_config.h
HITSIC_MK66F18_IAR/middleware/mcu-boot/targets/MK65F18/src/startup/arm/: startup_MK65F18.s
HITSIC_MK66F18_MCUX/: .cproject  .project  14th紫丁香二队sjmc_v3.0.mex  16th培训主控2-4.mex  HITSIC_MK66F18.mex  HITSIC_MK66F18_MCUX JLink Debug.launch  HITSIC_MK66F18_MCUX LinkServer Debug.launch  HITSIC_MK66F18_MCUX.mex  HITSIC_MK66F18_MCUX.sln  HITSIC_MK66F18_MCUX.vcxproj  HITSIC_MK66F18_MCUX.vcxproj.filters  MotherBoard16th_Training.mex  MotherBoard_16th_Training.mex  MotherBoard_16th_Training_Preview.mex  MotherBoard_16th_Training_Preview_Demo.mex  VSPG_1.0.7z  post_build.bat
HITSIC_MK66F18_MCUX/board/: board.h  clock_config.c  clock_config.c.bak  peripherals.c  peripherals.c.bak  peripherals.h  peripherals.h.bak  pin_mux.c  pin_mux.c.bak  pin_mux.h  pin_mux.h.bak  sdmmc_config.c  sdmmc_config.h
HITSIC_MK66F18_MCUX/component/lists/: generic_list.c
HITSIC_MK66F18_MCUX/drivers/: fsl_adc16.h  fsl_edma.c  fsl_sdhc.c  fsl_uart.c
HITSIC_MK66F18_MCUX/source/: ffconf.h  inc_gnc.h  include.hpp  isr.cpp  main.cpp  retarget_itm.c  retarget_lpuart.c  sc_adc.c  sc_adc.h  sc_ftm.c  sc_ftm.h  sc_gpio.c  sc_gpio.h  sc_host.c  sc_host.h  sc_test.hpp  sc_upload.c  sc_upload.h  syscalls.c  ur_control.cpp  ur_control.hpp
HITSIC_MK66F18_MCUX/source/main/: inc_generic.h  inc_stdlib.h  main.cpp  stdafx.cpp  stdafx.h
HITSIC_MK66F18_MCUX/source/module/: drv_betacat.cpp.txt  drv_disp_lcd240.cpp  drv_disp_lcd240.hpp  drv_extInt.cpp  drv_keybt.cpp.txt  drv_keybt.hpp.txt  drv_motor.hpp  drv_pitmgr.cpp  drv_pitmgr.hpp  drv_uartmgr.hpp  lcd.cpp.txt  rte_analog.hpp.txt  rte_baseio.cpp.txt  rte_baseio.hpp.txt  rte_timer.cpp.txt  rte_timer.hpp.txt
HITSIC_MK66F18_MCUX/startup/: startup_mk66f18.cpp
HITSIC_MK66F18_MCUX/utilities/: fsl_debug_console.c  fsl_debug_console_conf.h  fsl_str.c
deprecated/module/: drv_betacat.hpp.txt  drv_extInt.hpp  drv_motor.cpp  drv_uartmgr.cpp  lcd.hpp.txt  rte_analog.cpp.txt  rte_common.cpp  rte_common.hpp  rte_senior.cpp.txt  rte_senior.hpp.txt
